--- a/index.html
+++ b/index.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
     <title>Dictionary JS Project</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="card">
-            <div class="header">
-                <h2 class="title">Dictionary App</h2>
-                <div class="input">
-                    <input type="text" id="inputValue" placeholder="Search a Word...">
-                    <button class="btn"><i class="fas fa-search"></i></button>
-                </div>
-            </div>
-            <div class="stats">
-                <h4 class="word"></h4>
-                <h5 class="wType"></h5>
-                <span class="phonetics"></span>
-                <i class="fas fa-volume-up hidden" id="volume"></i>
-                <h6 class="no_audio"></h6>
-                <div id="main">
-                    <h3 class="meaning"></h3>
-                    <p class="par_meaning"></p>
-                </div>
-                <div id="main">
-                    <h3 class="example"></h3>
-                    <p class="par_example"></p>
-                </div>
-                <div id="main">
-                    <h3 class="synonyms"></h3>
-                    <p class="par_synonyms1"></p>
-                    <p class="par_synonyms2"></p>
-                </div>
-            </div>
-            <div class="info">
-                <h1 class="welcome">Welcome</h1>
-                <h2 class="par_info">Search for any word to get started</h2>
-            </div>
-           
+      <div class="card">
+        <div class="header">
+          <h2 class="title">Dictionary App</h2>
+          <div class="input">
+            <input type="text" id="inputValue" placeholder="Search a Word..." />
+            <button class="btn"><i class="fas fa-search"></i></button>
+          </div>
         </div>
-         <footer>
-                <h3 class="name"><a href="https://asliddin.com/">Asliddin Amirov </a>&copy;2022 | All rights reserved</h3>
-         </footer>
-
+        <div class="stats">
+          <h4 class="word"></h4>
+          <h5 class="wType"></h5>
+          <span class="phonetics"></span>
+          <i class="fas fa-volume-up hidden" id="volume"></i>
+          <h6 class="no_audio"></h6>
+          <div id="main">
+            <h3 class="meaning"></h3>
+            <p class="par_meaning"></p>
+          </div>
+          <div id="main">
+            <h3 class="example"></h3>
+            <p class="par_example"></p>
+          </div>
+          <div id="main">
+            <h3 class="synonyms"></h3>
+            <p class="par_synonyms1"></p>
+            <p class="par_synonyms2"></p>
+          </div>
+        </div>
+        <div class="info">
+          <h1 class="welcome">Welcome</h1>
+          <h2 class="par_info">Search for any word to get started</h2>
+        </div>
+      </div>
+      <footer>
+        <h3 class="name">
+          <a href="https://asliddin.com/">Asliddin Amirov </a>&copy;2022 | All
+          rights reserved
+        </h3>
+      </footer>
     </div>
 
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
