--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <footer>
         <h3 class="name">
-          <a href="https://asliddin.com/">Asliddin Amirov </a>&copy;2022 | All
+          <a href="https://asliddinamir.netlify.app/">Asliddin Amirov </a>&copy;2022 | All
           rights reserved
         </h3>
       </footer>
